--- a/src/index.css
+++ b/src/index.css
@@ -192,7 +192,7 @@ ul {
   margin-right: 10px; /* Space between username and buttons */
 }
 
-.friends-page li button {
+.request-btns {
   padding: 5px 10px;
   margin-right: 5px; /* Space between "Accept" and "Decline" buttons */
   background-color: #007bff;
@@ -210,6 +210,21 @@ ul {
 /* My Friends Section */
 .friends-page .my-friends {
   margin-top: 20px; /* Space between friend requests and friends sections */
+}
+
+.friends-page .friend-item {
+  list-style: none; /* Removes the bullet point */
+}
+
+.friends-page a {
+  text-decoration: none; /* Removes underline */
+  color: #007bff; /* Solid color for the link */
+  display: block; /* Ensures the entire link area is clickable */
+  transition: color 0.3s;
+}
+
+.friends-page a:hover {
+  color: #0056b3; /* Changes color on hover */
 }
 
 /* General container for Profile Page */
@@ -549,6 +564,86 @@ textarea + br + button {
   background-color: #e0a800;
 }
 
+/* Login and Register */
+.form-container {
+  max-width: 400px;
+  margin: 50px auto;
+  padding: 20px;
+  background-color: #ffffff;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+}
+
+.form-title {
+  text-align: center;
+  margin-bottom: 20px;
+  font-size: 1.5em;
+  font-weight: bold;
+}
+
+.form {
+  display: flex;
+  flex-direction: column;
+  gap: 15px;
+}
+
+.form-input {
+  padding: 10px;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  font-size: 1em;
+}
+
+.form-input:focus {
+  border-color: #007BFF;
+  outline: none;
+  box-shadow: 0 0 5px rgba(0, 123, 255, 0.5);
+}
+
+.form-button {
+  padding: 10px;
+  background-color: #007BFF;
+  color: #fff;
+  border: none;
+  border-radius: 4px;
+  cursor: pointer;
+  font-size: 1em;
+}
+
+.form-button:hover {
+  background-color: #0056b3;
+}
+
+.form-button:disabled {
+  background-color: #cccccc;
+  cursor: not-allowed;
+}
+
+.loading-text {
+  text-align: center;
+  color: #333;
+}
+
+.error-text {
+  color: red;
+  font-weight: bold;
+  text-align: center;
+}
+
+.form-navigation {
+  text-align: center;
+  margin-top: 15px;
+}
+
+.form-link {
+  color: #007BFF;
+  text-decoration: none;
+}
+
+.form-link:hover {
+  text-decoration: underline;
+}
+
 /* Responsive design: adjusting to screen sizes */
 @media (max-width: 768px) {
   .product-item {
@@ -558,6 +653,10 @@ textarea + br + button {
   .navbar,
   .footer-navbar {
     position: static; /* Allows scrolling when screen width is small */
+  }
+
+  .footer-navbar {
+    margin-top: auto; /* Ensures it stays at the bottom even with little content */
   }
 
   .block-container {
@@ -583,6 +682,19 @@ textarea + br + button {
   .data-btns {
     flex-direction: column; /* Stacks buttons vertically on small screens */
     gap: 10px;
+  }
+
+  .form-container {
+      margin: 20px auto;
+      padding: 15px;
+  }
+
+  .form-title {
+      font-size: 1.25em;
+  }
+
+  .form-input, .form-button {
+      font-size: 0.9em;
   }
 }
 
