--- a/src/index.css
+++ b/src/index.css
@@ -115,7 +115,7 @@ ul {
 
 /* Main container styling to avoid content underlapping navbars */
 .block-container {
-  padding-top: 50px; /* Adjust to navbar height */
+  padding-top: 90px; /* Adjust to navbar height */
   padding-bottom: 50px; /* Adjust to footer navbar height */
   min-height: calc(100vh - 100px); /* Ensures the container fills the viewport height minus the navbars */
   /* Make sure the width is not causing overflow */
@@ -135,14 +135,17 @@ ul {
 
 .community-header {
   padding-left: 10px;
+  margin-top: -30px;
+  margin-bottom: -10px
 }
 
 /* Ensures messages-container fits between navbars and is scrollable */
 .messages-container {
   flex: 1; /* Makes the container expand within the available space */
-  height: calc(100vh - 160px); /* Adjusts height considering top and bottom navbars */
+  height: calc(100vh - 270px); /* Adjusts height considering top and bottom navbars */
   overflow-y: auto; /* Keeps messages scrollable */
   border: 1px solid #ccc;
+  background-color: #a3caf3;
   padding: 10px;
   margin: 20px 0;
   box-sizing: border-box; /* Ensures padding doesn’t increase the container’s size */
@@ -396,9 +399,8 @@ textarea + br + button {
   flex-direction: column;
   justify-content: center; /* Center content vertically */
   align-items: center; /* Centers the form and submitted data sections */
-  padding: 20px;
   max-width: 800px; /* Limits width for better readability */
-  margin: 80px auto; /* Center-aligns the container on the page */
+  margin: 10px auto; /* Center-aligns the container on the page */
 }
 
 .add-product-container {
@@ -570,7 +572,7 @@ textarea + br + button {
   justify-content: center;
   align-items: center;
   gap: 20px; /* Space between the two dropdowns */
-  margin-bottom: 20px;
+  margin-top: -15px;
 }
 
 /* Products grid */
@@ -589,7 +591,7 @@ textarea + br + button {
 }
 
 .product-item {
-  width: calc(100% - 20px);
+  width: calc(100% - 50px);
   display: flex;
   flex-direction: column;
   align-items: flex-start; /* Aligns details to the left */
@@ -685,7 +687,7 @@ textarea + br + button {
   max-width: 400px;
   margin: 50px auto;
   padding: 20px;
-  background-color: #ffffff;
+  background-color: #ebe0e0;
   border-radius: 8px;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
